--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,8 +1,8 @@
 {
 	"id": "ffd-A08-pwa App",
 	"short_name": "A08",
-	"start_url": "/",
-	"scope": "/",
+	"start_url": "/A08/",
+	"scope": "/A08/",
 	"display": "standalone",
 	"orientation": "portrait",
 	"theme_color": "#A3E635",
